# dap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
examples/: integration-guide.md
examples/credentials/: discovery-document.json  jwt-individual.json  jwt-organization.json  w3c-vc.json
sdk/python/: README.md  pyproject.toml
sdk/python/dap_sdk/: __init__.py  agent.py  principal.py  service.py  types.py
sdk/python/examples/: end_to_end.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: demo-server.ts  demo.ts  end-to-end.ts
sdk/typescript/src/: index.ts
spec/: v0.1.md
